--- a/src/app/pages/tables/dashboard/dashboard.component.html
+++ b/src/app/pages/tables/dashboard/dashboard.component.html
@@ -1,15 +1,15 @@
 <div class="row">
-  <!--Productos Top Hoy-->
-  <div class="col-xxxl-9 col-xxl-8 col-lg-7 col-md-6">
+  <!--Ventas dia(-7)-->
+  <div class="col-xxxl-6 col-xxl-6 col-lg-6 col-md-6">
     <nb-card>
-      <nb-card-header>Productos Top Hoy</nb-card-header>
+      <nb-card-header>Comparación de ventas Hoy(-7)</nb-card-header>
         <nb-card-body>
-          <ngx-productos-top-hoy></ngx-productos-top-hoy>
+          <ngx-ventas-semanal></ngx-ventas-semanal>
         </nb-card-body>
     </nb-card>
   </div>
   <!--Cuadrado Con porcentajes-->
-  <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
+  <div class="col-xxxl-6 col-xxl-6 col-lg-6 col-md-6">
     <nb-card>
         <nb-card-body>
           <ngx-cuadro-avance-semanal></ngx-cuadro-avance-semanal>
@@ -49,6 +49,18 @@
   </div>
 </div>
 
+<div class="row">
+  <!--Productos Top Hoy-->
+  <div class="col-xxxl-12 col-xxl-12 col-lg-12 col-md-12">
+    <nb-card>
+      <nb-card-header>Productos Top Hoy</nb-card-header>
+        <nb-card-body>
+          <ngx-productos-top-hoy></ngx-productos-top-hoy>
+        </nb-card-body>
+    </nb-card>
+  </div>
+</div>
+
 <!--Tercera Parte-->
 <div class="row">
   <div class="col-xxxl-8 col-xxl-8 col-lg-7 col-md-6">
@@ -63,14 +75,7 @@
 
 <!--Cuarta Parte-->
 <div class="row">
-  <div class="col-xxxl-4 col-xxl-4 col-lg-5 col-md-6">
-    <nb-card>
-      <nb-card-header>Ventas Ultima Semana</nb-card-header>
-        <nb-card-body>
-          <ngx-ventas-semanal></ngx-ventas-semanal>
-        </nb-card-body>
-    </nb-card>
-  </div>
+
 
   <div class="col-xxxl-8 col-xxl-8 col-lg-7 col-md-6">
     <nb-card>
