--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -12,6 +12,9 @@
 </div>
 
 <div class="header-container">
+
+  <button nbButton status="basic" (click)="redireccion()"><nb-icon icon="search-outline"></nb-icon></button>
+
   <nb-actions size="small">
 
     <!-- <nb-action class="control-item">
