--- a/src/app/pages/extra-components/alertas-orion/components/pre-almacen/pre-almacen.component.html
+++ b/src/app/pages/extra-components/alertas-orion/components/pre-almacen/pre-almacen.component.html
@@ -14,7 +14,7 @@
       <td>{{ pre.id_order }}</td>
       <td>{{ pre.reference }}</td>
       <td>{{ pre.payment }}</td>
-      <td><a href="https://orion91.com/admin753tbd1ux/index.php?controller=AdminOrders&vieworder=&id_order={{ pre.id_order }}">Ir a pedido</a></td>
+      <td><a href="https://orion91.com/admin753tbd1ux/index.php?controller=AdminOrders&vieworder=&id_order={{ pre.id_order }}" target="_blank">Ir a pedido</a></td>
       <td>{{ pre.name }}</td>
       <td>{{ pre.date_add}}</td>
     </tr>
