--- a/src/app/pages/tables/categorias-por-meses/categorias-por-meses.component.html
+++ b/src/app/pages/tables/categorias-por-meses/categorias-por-meses.component.html
@@ -2,7 +2,7 @@
   <nb-card-header>Categorias Por Meses</nb-card-header>
   <nb-card-body style="height: 100%;">
 
-    <nb-select placeholder="Seleccione Tienda: " (selectedChange)="buscarTienda($event)">
+    <nb-select placeholder="Seleccione Canal: " (selectedChange)="buscarTienda($event)">
       <nb-option *ngFor="let tienda of tiendas" [value]="tienda.variable">{{ tienda.name }}</nb-option>
     </nb-select><br><br>
 
