--- a/src/app/pages/tables/amazon-no-publicado/amazon-no-publicado.component.html
+++ b/src/app/pages/tables/amazon-no-publicado/amazon-no-publicado.component.html
@@ -2,6 +2,7 @@
   <nb-card-header>Productos No Publicados</nb-card-header>
 
   <nb-card-body>
+    <span>Listado de productos no publicados se genera mediante un csv de forma manual. Ubicación: Seller Amazon/ Inventario / Informes de Inventario "informe de todos los listings"</span><br><br>
     <ng2-smart-table [settings]="config" [source]="source">
     </ng2-smart-table>
   </nb-card-body>
