--- a/src/app/pages/tables/buscador-de-productos/buscador-de-productos.component.html
+++ b/src/app/pages/tables/buscador-de-productos/buscador-de-productos.component.html
@@ -14,6 +14,7 @@
   </nb-card-header>
 
   <nb-card-body>
+    <span>Introduce cualquiera de los campos que se muestran en la cabecera. Ejemplo "Vintage".</span><br><br>
     <ng2-smart-table [settings]="config" [source]="source"></ng2-smart-table>
   </nb-card-body>
 
