--- a/src/app/pages/tables/categoria-producto/categoria-producto.component.html
+++ b/src/app/pages/tables/categoria-producto/categoria-producto.component.html
@@ -2,6 +2,7 @@
   <nb-card-header>Orden Cat-Product</nb-card-header>
 
   <nb-card-body>
+    <span>Muestra/edita el orden de un producto dentro de su categoría.</span><br><br>
             <div class="table-responsive cnstr-record product-tbl">
               <table class="table table-bordered heading-hvr">
                 <thead>
