--- a/src/app/pages/tables/dashboard/dashboard.component.html
+++ b/src/app/pages/tables/dashboard/dashboard.component.html
@@ -61,33 +61,7 @@
   </div>
 </div>
 
-<!--Tercera Parte-->
-<div class="row">
-  <div class="col-xxxl-8 col-xxl-8 col-lg-7 col-md-6">
-    <nb-card>
-      <nb-card-header>Comparación 2021 vs 2022</nb-card-header>
-        <nb-card-body>
-          <ngx-grafico-comparacion-ventas></ngx-grafico-comparacion-ventas>
-        </nb-card-body>
-    </nb-card>
-  </div>
-</div>
-
-<!--Cuarta Parte-->
-<div class="row">
-
-
-  <div class="col-xxxl-8 col-xxl-8 col-lg-7 col-md-6">
-    <nb-card>
-      <nb-card-header>Roturas</nb-card-header>
-        <nb-card-body>
-          <ngx-rotura-stock-dashboard></ngx-rotura-stock-dashboard>
-        </nb-card-body>
-    </nb-card>
-  </div>
-</div>
-
-<!--Cuarta Parte-->
+<!--Tercer Parte-->
 <div class="row">
   <!--DashBoard Ventas Paises hoy-->
   <div class="col-xxxl-4 col-xxl-4 col-lg-5 col-md-6">
@@ -118,4 +92,41 @@
   </div>
 </div>
 
+<!--Cuarta Parte-->
+<div class="row">
+  <div class="col-xxxl-12 col-xxl-12 col-lg-12 col-md-12">
+    <nb-card>
+      <nb-card-header>Comparación 2021 vs 2022</nb-card-header>
+        <nb-card-body>
+          <ngx-grafico-comparacion-ventas></ngx-grafico-comparacion-ventas>
+        </nb-card-body>
+    </nb-card>
+  </div>
+</div>
+
+<!--Quinta Parte-->
+<div class="row">
+  <div class="col-xxxl-12 col-xxl-12 col-lg-12 col-md-12">
+    <nb-card>
+      <nb-card-header>Roturas</nb-card-header>
+        <nb-card-body>
+          <ngx-rotura-stock-dashboard></ngx-rotura-stock-dashboard>
+        </nb-card-body>
+    </nb-card>
+  </div>
+</div>
+
+
+
+<!--Conectores Canales-->
+<div class="row">
+  <div class="col-xxxl-12 col-xxl-12 col-lg-12 col-md-12">
+    <nb-card>
+      <nb-card-header>Conectores Canales</nb-card-header>
+        <nb-card-body>
+          <ngx-conectores-canales></ngx-conectores-canales>
+        </nb-card-body>
+    </nb-card>
+  </div>
+</div>
 
