--- a/src/app/pages/tables/imagenes-cleaner/imagenes-cleaner.component.html
+++ b/src/app/pages/tables/imagenes-cleaner/imagenes-cleaner.component.html
@@ -1,8 +1,7 @@
 <nb-card>
-  <nb-card-header>
-    Imagenes Cleaner
-  </nb-card-header>
+  <nb-card-header>Imagenes Cleaner</nb-card-header>
   <nb-card-body>
+    <span>Vista rapida para revisar que ninguna imagen tenga fondo. Todas las imagagenes principales deben de ir con fondo blanco.</span><br><br>
     <table class="table table-striped" id="div1">
       <thead>
         <tr>
