--- a/src/app/pages/tables/mano-mano/mano-mano.component.html
+++ b/src/app/pages/tables/mano-mano/mano-mano.component.html
@@ -9,8 +9,7 @@
       <nb-radio [value]="4" (click)="avanzado(4)"> Indice 1,18 </nb-radio>
       <nb-radio [value]="9" (click)="avanzado(9)"> Indice 1,15 </nb-radio>
       <nb-radio [value]="8" (click)="avanzado(8)"> Indice 1,10 </nb-radio>
-      <nb-radio [value]="7" (click)="avanzado(7)"> Indice 1,05 </nb-radio>
-      <nb-radio [value]="2" (click)="avanzado(2)"> Indice 1,03 </nb-radio>
+      <nb-radio [value]="2" (click)="avanzado(2)"> Indice 1,05/1,04/1,03 </nb-radio>
       <nb-radio [value]="5" (click)="avanzado(5)"> Indice 1,00 </nb-radio>
       <nb-radio [value]="3" (click)="avanzado(3)" [checked]="true"> Indice Distinto </nb-radio>
     </nb-radio-group> <br>
