--- a/src/app/pages/tables/precios-makro-rangos/precios-makro-rangos.component.html
+++ b/src/app/pages/tables/precios-makro-rangos/precios-makro-rangos.component.html
@@ -2,7 +2,7 @@
   <nb-card-header>Precios Makro</nb-card-header>
 
   <nb-card-body>
-
+  <span>Listado de todos los productos.</span>
     <br><br>
     <div style="display: flex; justify-content: flex-end;">
       <div style="padding: 10px;">
