--- a/src/app/pages/tables/producto-con-pocas-imagenes/producto-con-pocas-imagenes.component.html
+++ b/src/app/pages/tables/producto-con-pocas-imagenes/producto-con-pocas-imagenes.component.html
@@ -2,6 +2,7 @@
   <nb-card-header>Productos con Pocas Imágenes</nb-card-header>
 
   <nb-card-body>
+    <span>Listado de productos activos que tienen menos de dos imágenes</span><br><br>
     <ng2-smart-table [settings]="config" [source]="source"></ng2-smart-table>
   </nb-card-body>
 </nb-card>
