--- a/src/app/pages/tables/productos-top-fechas/productos-top-fechas.component.html
+++ b/src/app/pages/tables/productos-top-fechas/productos-top-fechas.component.html
@@ -1,6 +1,6 @@
 <nb-card size="large" style="height: 100%; width: 100%;">
 
-  <nb-card-header>Productos Top</nb-card-header>
+  <nb-card-header>Productos Top <br><br><span *ngIf="fechaInicio != null">Fechas: {{ fechaInicio }} - {{ fechaFin }}</span></nb-card-header>
 
   <nb-card-body class="two-inputs">
 
