--- a/src/app/pages/tables/sliders-elementor/sliders-elementor.component.html
+++ b/src/app/pages/tables/sliders-elementor/sliders-elementor.component.html
@@ -2,6 +2,7 @@
   <nb-card-header>Productos desactivados en slider de elementor</nb-card-header>
 
   <nb-card-body>
+    <span>Listado de producto que son llamados desde algún componente de elementor situado en alguna categoría.</span><br><br>
     <ng2-smart-table [settings]="config" [source]="source">
     </ng2-smart-table>
   </nb-card-body>
