--- a/src/app/pages/tables/precios-fijos-makro/precios-fijos-makro.component.html
+++ b/src/app/pages/tables/precios-fijos-makro/precios-fijos-makro.component.html
@@ -2,6 +2,7 @@
   <nb-card-header>Precios Fijos de MAKRO</nb-card-header>
 
   <nb-card-body>
+    <span>Listado de precios que se pasan fijos por temas de competencia dentro de Makro.</span><br><br>
     <ng2-smart-table [settings]="config" [source]="source" (createConfirm)="onAdd($event)" (deleteConfirm)="onDeleteConfirm($event)" (editConfirm)="onEdit($event)">
     </ng2-smart-table>
   </nb-card-body>
