--- a/src/app/pages/tables/productos-faqs/productos-faqs.component.html
+++ b/src/app/pages/tables/productos-faqs/productos-faqs.component.html
@@ -2,6 +2,7 @@
   <nb-card-header>Productos Faqs</nb-card-header>
 
   <nb-card-body>
+    <span>Listado de productos que en su pie de página en ORION91.COM tienen FAQS.</span><br><br>
     <ng2-smart-table [settings]="config" [source]="source" (createConfirm)="onAdd($event)" (deleteConfirm)="onDeleteConfirm($event)" (editConfirm)="onEdit($event)">
     </ng2-smart-table>
   </nb-card-body>
