--- a/src/app/pages/extra-components/alertas-orion/alertas-orion.component.html
+++ b/src/app/pages/extra-components/alertas-orion/alertas-orion.component.html
@@ -108,7 +108,7 @@
 
 <!--Productos Sin Ean13-->
 <nb-card *ngIf="ean13 > 0">
-  <nb-card-header>Productos sin Ean13</nb-card-header>
+  <nb-card-header>Productos sin Ean13 y con Stock</nb-card-header>
   <nb-card-body>
     <span>Productos activos sin EAN13, este dato es vital para poder publicar los productos en los MP y los DS.</span><br><br>
     <ngx-productos-sin-ean13></ngx-productos-sin-ean13>
