--- a/src/app/pages/extra-components/alertas-orion/components/precios-cambiados/precios-cambiados.component.html
+++ b/src/app/pages/extra-components/alertas-orion/components/precios-cambiados/precios-cambiados.component.html
@@ -4,6 +4,7 @@
       <th scope="col">Id Producto</th>
       <th scope="col">Ean13</th>
       <th scope="col">Reference</th>
+      <th scope="col">Id Ax</th>
       <th scope="col">Precio Orion91</th>
       <th scope="col">Precio Ax</th>
       <th scope="col">Producto</th>
@@ -16,6 +17,7 @@
       <td>{{ precio.id_product }}</td>
       <td>{{ precio.ean13}}</td>
       <td>{{ precio.reference }}</td>
+      <td>{{ precio.id_ax}}</td>
       <td>{{ precio.precioORION91 | currency:'EUR': true}}</td>
       <td>{{ precio.precioAX | currency:'EUR': true}}</td>
       <td>{{ precio.nombre_producto }}</td>
