--- a/src/app/pages/tables/abonos/abonos.component.html
+++ b/src/app/pages/tables/abonos/abonos.component.html
@@ -56,7 +56,7 @@
             <td align="center">
               <div style="display: flex; justify-content: center;">
                 <div *ngIf="abo.estadoPedido == 'Enviado' || abo.estadoPedido == 'Pagado' || abo.estadoPedido == 'Amazon Prime' || abo.estadoPedido == 'En Proceso'" style="margin-right: 5px;">
-                  <nb-icon icon="alert-triangle-outline" pack="eva" style="color: red;"></nb-icon>
+                  <nb-icon icon="alert-triangle-outline" pack="eva" style="color: black !important;"></nb-icon>
                 </div>
                 <div>{{ abo.estadoPedido }}</div>
               </div>
