--- a/src/app/pages/tables/abonos/components/model-motivos/model-motivos.component.html
+++ b/src/app/pages/tables/abonos/components/model-motivos/model-motivos.component.html
@@ -11,20 +11,16 @@
     <table class="table mb-0 table-striped">
       <thead class="bg-dark text-white">
         <tr style="text-align: center;">
-          <th>Or Pedido</th>
-          <th>Pedido Ax</th>
           <th>Id Factura</th>
           <th>Id Producto</th>
           <th>Imágen</th>
           <th>Producto</th>
-          <th>Cantidad Vendida</th>
+          <th>Cantidad</th>
           <th>Total Abono</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td align="center">{{ orPedido }}</td>
-          <td align="center">{{ pedidoAx }}</td>
           <td align="center">{{ idFactura }}</td>
           <td align="center">{{ idProduct }}</td>
            <td align="center"><img src="{{ imagen }}" alt=""></td>
